[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyVisualCrossing"
dynamic = ["version"]
description = "Gets the weather data from Visual Crossing"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "briis", email = "bjarne@briis.com" },
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/briis/pyVisualCrossing"

[tool.setuptools.dynamic]
version = { attr = "pyVisualCrossing.__version__" }

[tool.setuptools.packages.find]
include = ["pyVisualCrossing*"]
